--- a/craft/templates/_layouts/home/home.html
+++ b/craft/templates/_layouts/home/home.html
@@ -1,10 +1,10 @@
 {% extends "_index" %}
 
 {% block content %}
-	<h1>{{ entry.title }}</h1>
+	<h1 class="home click">{{ entry.title }}</h1>
 
   <button id="clickme">click me</button>
-
+	<input type="text" name="name" value="">
 	{{ entry.body }}
 
 {% endblock %}
