--- a/craft/templates/_index.html
+++ b/craft/templates/_index.html
@@ -8,6 +8,7 @@
   <title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
 	<link rel="home" href="{{ siteUrl }}" />
   <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="assets/bundle.css" media="screen" charset="utf-8">
 </head>
 
 <body>
