--- a/craft/templates/_layouts/home/home.scss
+++ b/craft/templates/_layouts/home/home.scss
@@ -1,4 +1,11 @@
 .home {
   font-family: sans-serif;
   color: #00f;
+  font-size: 12px;
+  div {
+    background: red;
+    :hover {
+        text-decoration: underline;
+    }
+  }
 }
