--- a/craft/templates/_layouts/home/home.html
+++ b/craft/templates/_layouts/home/home.html
@@ -4,4 +4,8 @@
 	<h1 class="home click">{{ entry.title }}</h1>
 	{{ entry.body }}
 
+	<p class="tarrynsColor">
+		Hello Tarryn
+	</p>
+
 {% endblock %}
