--- a/craft/templates/vars.scss
+++ b/craft/templates/vars.scss
@@ -7,7 +7,24 @@ body {
     font-family: sans-serif;
   }
 }
-$red: red;
+
+.tarrynsColor {
+  color: pink;
+  font-size: 100px;
+  font-family: cursive;
+  -webkit-animation: roll .3s infinite alternate;
+}
+
+@keyframes roll {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.1);
+  }
+}
+
+$red: blue;
 
 
 @import './_layouts/home/home.scss';
